Add layer group configuration

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 # Environment variables HB-Member Sourcing
 API_BASE_URL=https://db.scout.ch/api/people
 API_KEY=<Your API KEY>
+LAYER_GROUP_ID=6855
 
 # Environment variables for the sync to M365
 RABBITMQ_HOST=localhost
